@@ -1,3 +1,8 @@
+2008-02-19  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/plugins/DefaultGramplets.py: News renders text with styles
+	* src/DataViews/GrampletView.py (GuiGramplet.render_text): 
+	First draft of a TextBuffer with markup
+
 2008-02-19 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/ViewManager.py: #1559, CTRL+N/P also if no sidebar
 
